cactus-engine/cactus_engine.h

typedef void* cactus_model_t;
CACTUS_FFI_EXPORT cactus_model_t cactus_init(
    const char* model_path,
    const char* corpus_dir,                 // optional: NULL if no RAG corpus
    bool cache_index                        // false = always rebuild index, true = load cached if available
);
CACTUS_FFI_EXPORT void cactus_set_telemetry_environment(const char* framework, const char* cache_location, const char* version);
// cactus graph export
typedef void* cactus_graph_t;
typedef uint64_t cactus_node_t;
typedef struct {
    int32_t precision;
    size_t rank;
    size_t shape[8];
    size_t num_elements;
    size_t byte_size;
} cactus_tensor_info_t;
CACTUS_FFI_EXPORT cactus_graph_t cactus_graph_create(void);
CACTUS_FFI_EXPORT void cactus_graph_destroy(cactus_graph_t graph);
CACTUS_FFI_EXPORT int cactus_graph_hard_reset(cactus_graph_t graph);
CACTUS_FFI_EXPORT int cactus_graph_save(cactus_graph_t graph, const char* filename);
CACTUS_FFI_EXPORT cactus_graph_t cactus_graph_load(const char* filename);
CACTUS_FFI_EXPORT int cactus_graph_input(
    cactus_graph_t graph, const size_t* shape, size_t rank, int32_t precision,
cactus_node_t* out_node);
CACTUS_FFI_EXPORT int cactus_graph_set_input(
    cactus_graph_t graph, cactus_node_t node, const void* data, int32_t
precision);
CACTUS_FFI_EXPORT int cactus_graph_set_external_input(
    cactus_graph_t graph, cactus_node_t node, void* data, int32_t precision);
CACTUS_FFI_EXPORT int cactus_graph_mark_embedded_input(
    cactus_graph_t graph, cactus_node_t node);
CACTUS_FFI_EXPORT int cactus_graph_precision_cast(
    cactus_graph_t graph, cactus_node_t input, int32_t target_precision, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_add(cactus_graph_t graph, cactus_node_t a,
cactus_node_t b, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_add_clipped(cactus_graph_t graph, cactus_node_t a,
cactus_node_t b, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_subtract(cactus_graph_t graph, cactus_node_t
a, cactus_node_t b, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_multiply(cactus_graph_t graph, cactus_node_t
a, cactus_node_t b, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_divide(cactus_graph_t graph, cactus_node_t
a, cactus_node_t b, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_not_equal(cactus_graph_t graph, cactus_node_t
a, cactus_node_t b, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_scalar_add(cactus_graph_t graph, cactus_node_t x, float value, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_scalar_subtract(cactus_graph_t graph, cactus_node_t x, float value, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_scalar_multiply(cactus_graph_t graph, cactus_node_t x, float value, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_scalar_divide(cactus_graph_t graph, cactus_node_t x, float value, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_scalar_not_equal(cactus_graph_t graph, cactus_node_t x, float value, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_scalar_exp(cactus_graph_t graph, cactus_node_t x, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_scalar_sqrt(cactus_graph_t graph, cactus_node_t x, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_scalar_cos(cactus_graph_t graph, cactus_node_t x, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_scalar_sin(cactus_graph_t graph, cactus_node_t x, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_scalar_log(cactus_graph_t graph, cactus_node_t x, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_abs(cactus_graph_t graph, cactus_node_t x,
cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_pow(cactus_graph_t graph, cactus_node_t x,
float exponent, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_view(
    cactus_graph_t graph, cactus_node_t x, const size_t* shape, size_t rank,
cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_flatten(
    cactus_graph_t graph, cactus_node_t x, int32_t start_dim, int32_t end_dim,
cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_reshape(
    cactus_graph_t graph, cactus_node_t x, const size_t* shape, size_t rank, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_transpose(
    cactus_graph_t graph, cactus_node_t x, int32_t backend, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_transpose_n(
    cactus_graph_t graph, cactus_node_t x, const size_t* permutation, size_t rank, int32_t backend, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_slice(
    cactus_graph_t graph, cactus_node_t x, int32_t axis, size_t start, size_t length, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_index(
    cactus_graph_t graph, cactus_node_t x, size_t index_value, int32_t dim, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_sum(cactus_graph_t graph, cactus_node_t x, int32_t axis, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_mean(cactus_graph_t graph, cactus_node_t x, int32_t axis, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_variance(cactus_graph_t graph, cactus_node_t x, int32_t axis, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_min(cactus_graph_t graph, cactus_node_t x, int32_t axis, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_max(cactus_graph_t graph, cactus_node_t x, int32_t axis, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_cumsum(cactus_graph_t graph, cactus_node_t x, int32_t axis, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_concat(
    cactus_graph_t graph, cactus_node_t a, cactus_node_t b, int32_t axis,
cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_cat(
    cactus_graph_t graph, const cactus_node_t* nodes, size_t count, int32_t
axis, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_matmul(
    cactus_graph_t graph, cactus_node_t a, cactus_node_t b, bool pretransposed_rhs, int32_t backend, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_gather(
    cactus_graph_t graph, cactus_node_t tensor, cactus_node_t indices, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_embedding_from_tensor(
    cactus_graph_t graph, cactus_node_t embedding_tensor, cactus_node_t indices, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_embedding_from_file(
    cactus_graph_t graph, const char* filename, cactus_node_t indices, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_mmap_embeddings(
    cactus_graph_t graph, const char* filename, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_mmap_weights(
    cactus_graph_t graph, const char* filename, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_bind_mmap_weights(
    cactus_graph_t graph, cactus_node_t node, const char* filename);
CACTUS_FFI_EXPORT int cactus_graph_bilinear_interpolation(
    cactus_graph_t graph, cactus_node_t pos_embeds, size_t dst_height, size_t dst_width, cactus_node_t* out);
CACTUS_FFI_EXPORT int cactus_graph_release_weight_pages(cactus_graph_t graph, cactus_node_t node);
CACTUS_FFI_EXPORT int cactus_graph_prefetch_weight_pages(cactus_graph_t graph, cactus_node_t node);
CACTUS_FFI_EXPORT int cactus_graph_release_all_weight_pages(cactus_graph_t graph);