python/cactus/bindings/cactus.py

"""Cactus Python FFI bindings."""
import ctypes
import json
import os
import platform
from pathlib import Path

TokenCallback = ctypes.CFUNCTYPE(None, ctypes.c_char_p, ctypes.c_uint32, ctypes.c_void_p)

_LIB_NAME = "libcactus.dylib" if platform.system() == "Darwin" else "libcactus.so"


def _find_library():
    override = os.environ.get("CACTUS_LIB_PATH")
    if override:
        return Path(override).expanduser().resolve()

    bundled = Path(__file__).parent / "lib" / _LIB_NAME
    if bundled.exists():
        return bundled

    dev_build = Path(__file__).parent.parent.parent.parent / "cactus" / "build" / _LIB_NAME
    if dev_build.exists():
        return dev_build

    raise RuntimeError(
        f"Cactus library ({_LIB_NAME}) not found.\n"
        f"Install with: pip install cactus-compute\n"
        f"Or build from source: cactus build --python"
    )


_LIB_PATH = _find_library()
_lib = ctypes.CDLL(str(_LIB_PATH))


def _bind_optional(name, argtypes, restype):
    try:
        fn = getattr(_lib, name)
    except AttributeError:
        return None
    fn.argtypes = argtypes
    fn.restype = restype
    return fn

cactus_graph_t = ctypes.c_void_p
cactus_node_t = ctypes.c_uint64

class cactus_tensor_info_t(ctypes.Structure):
    _fields_ = [
        ("precision", ctypes.c_int32),
        ("rank", ctypes.c_size_t),
        ("shape", ctypes.c_size_t * 8),
        ("num_elements", ctypes.c_size_t),
        ("byte_size", ctypes.c_size_t),
    ]

_lib.cactus_set_telemetry_environment.argtypes = [ctypes.c_char_p, ctypes.c_char_p, ctypes.c_char_p]
_lib.cactus_set_telemetry_environment.restype = None
_lib.cactus_set_telemetry_environment(b"python", None, None)

_lib.cactus_init.argtypes = [ctypes.c_char_p, ctypes.c_char_p, ctypes.c_bool]
_lib.cactus_init.restype = ctypes.c_void_p

# cactus graph API
_lib.cactus_graph_create.restype = cactus_graph_t
_lib.cactus_graph_destroy.argtypes = [cactus_graph_t]
_lib.cactus_graph_hard_reset.argtypes = [cactus_graph_t]
_lib.cactus_graph_hard_reset.restype = ctypes.c_int

_lib.cactus_graph_save.argtypes = [cactus_graph_t, ctypes.c_char_p]
_lib.cactus_graph_save.restype = ctypes.c_int

_lib.cactus_graph_load.argtypes = [ctypes.c_char_p]
_lib.cactus_graph_load.restype = cactus_graph_t

_lib.cactus_graph_input.argtypes = [
    cactus_graph_t,
    ctypes.POINTER(ctypes.c_size_t), ctypes.c_size_t,
    ctypes.c_int32, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_input.restype = ctypes.c_int

_lib.cactus_graph_set_input.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.c_void_p, ctypes.c_int32
]
_lib.cactus_graph_set_input.restype = ctypes.c_int
_lib.cactus_graph_set_external_input.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.c_void_p, ctypes.c_int32
]
_lib.cactus_graph_set_external_input.restype = ctypes.c_int
_bind_optional(
    "cactus_graph_mark_embedded_input",
    [cactus_graph_t, cactus_node_t],
    ctypes.c_int,
)

_lib.cactus_graph_add.argtypes = [
    cactus_graph_t, cactus_node_t, cactus_node_t, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_add.restype = ctypes.c_int
_lib.cactus_graph_add_clipped.argtypes = [
    cactus_graph_t, cactus_node_t, cactus_node_t, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_add_clipped.restype = ctypes.c_int

_lib.cactus_graph_subtract.argtypes = [cactus_graph_t, cactus_node_t,
  cactus_node_t, ctypes.POINTER(cactus_node_t)]
_lib.cactus_graph_subtract.restype = ctypes.c_int

_lib.cactus_graph_multiply.argtypes = [
    cactus_graph_t, cactus_node_t, cactus_node_t, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_multiply.restype = ctypes.c_int

_lib.cactus_graph_divide.argtypes = [
    cactus_graph_t, cactus_node_t, cactus_node_t, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_divide.restype = ctypes.c_int
_bind_optional(
    "cactus_graph_not_equal",
    [cactus_graph_t, cactus_node_t, cactus_node_t, ctypes.POINTER(cactus_node_t)],
    ctypes.c_int,
)

_lib.cactus_graph_precision_cast.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.c_int32, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_precision_cast.restype = ctypes.c_int
_bind_optional(
    "cactus_graph_quantize_activations",
    [cactus_graph_t, cactus_node_t, ctypes.POINTER(cactus_node_t)],
    ctypes.c_int,
)

_lib.cactus_graph_scalar_add.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.c_float, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_scalar_add.restype = ctypes.c_int
_lib.cactus_graph_scalar_subtract.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.c_float, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_scalar_subtract.restype = ctypes.c_int
_lib.cactus_graph_scalar_multiply.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.c_float, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_scalar_multiply.restype = ctypes.c_int
_lib.cactus_graph_scalar_divide.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.c_float, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_scalar_divide.restype = ctypes.c_int
_bind_optional(
    "cactus_graph_scalar_floor_divide",
    [cactus_graph_t, cactus_node_t, ctypes.c_float, ctypes.POINTER(cactus_node_t)],
    ctypes.c_int,
)
_bind_optional(
    "cactus_graph_scalar_not_equal",
    [cactus_graph_t, cactus_node_t, ctypes.c_float, ctypes.POINTER(cactus_node_t)],
    ctypes.c_int,
)
_lib.cactus_graph_scalar_exp.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_scalar_exp.restype = ctypes.c_int
_lib.cactus_graph_scalar_sqrt.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_scalar_sqrt.restype = ctypes.c_int
_lib.cactus_graph_scalar_cos.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_scalar_cos.restype = ctypes.c_int
_lib.cactus_graph_scalar_sin.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_scalar_sin.restype = ctypes.c_int
_lib.cactus_graph_scalar_log.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_scalar_log.restype = ctypes.c_int
_bind_optional(
    "cactus_graph_masked_select_prefix",
    [cactus_graph_t, cactus_node_t, cactus_node_t, ctypes.POINTER(cactus_node_t)],
    ctypes.c_int,
)
_bind_optional(
    "cactus_graph_masked_scatter",
    [cactus_graph_t, cactus_node_t, cactus_node_t, cactus_node_t, ctypes.POINTER(cactus_node_t)],
    ctypes.c_int,
)

_lib.cactus_graph_abs.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_abs.restype = ctypes.c_int

_lib.cactus_graph_pow.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.c_float, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_pow.restype = ctypes.c_int

_lib.cactus_graph_view.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.POINTER(ctypes.c_size_t), ctypes.c_size_t,
    ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_view.restype = ctypes.c_int

_lib.cactus_graph_flatten.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.c_int32, ctypes.c_int32, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_flatten.restype = ctypes.c_int
_lib.cactus_graph_reshape.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.POINTER(ctypes.c_size_t), ctypes.c_size_t, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_reshape.restype = ctypes.c_int
_bind_optional(
    "cactus_graph_expand",
    [cactus_graph_t, cactus_node_t, ctypes.POINTER(ctypes.c_size_t), ctypes.c_size_t, ctypes.POINTER(cactus_node_t)],
    ctypes.c_int,
)
_lib.cactus_graph_transpose.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.c_int32, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_transpose.restype = ctypes.c_int
_lib.cactus_graph_transpose_n.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.POINTER(ctypes.c_size_t), ctypes.c_size_t, ctypes.c_int32, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_transpose_n.restype = ctypes.c_int
_lib.cactus_graph_slice.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.c_int32, ctypes.c_size_t, ctypes.c_size_t, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_slice.restype = ctypes.c_int
_lib.cactus_graph_index.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.c_size_t, ctypes.c_int32, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_index.restype = ctypes.c_int

_lib.cactus_graph_concat.argtypes = [
    cactus_graph_t, cactus_node_t, cactus_node_t, ctypes.c_int32, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_concat.restype = ctypes.c_int

_lib.cactus_graph_cat.argtypes = [
    cactus_graph_t, ctypes.POINTER(cactus_node_t), ctypes.c_size_t, ctypes.c_int32,
    ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_cat.restype = ctypes.c_int
_lib.cactus_graph_matmul.argtypes = [
    cactus_graph_t, cactus_node_t, cactus_node_t, ctypes.c_bool, ctypes.c_int32, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_matmul.restype = ctypes.c_int
_lib.cactus_graph_gather.argtypes = [
    cactus_graph_t, cactus_node_t, cactus_node_t, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_gather.restype = ctypes.c_int
_lib.cactus_graph_embedding_from_tensor.argtypes = [
    cactus_graph_t, cactus_node_t, cactus_node_t, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_embedding_from_tensor.restype = ctypes.c_int
_lib.cactus_graph_embedding_from_file.argtypes = [
    cactus_graph_t, ctypes.c_char_p, cactus_node_t, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_embedding_from_file.restype = ctypes.c_int
_lib.cactus_graph_mmap_embeddings.argtypes = [
    cactus_graph_t, ctypes.c_char_p, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_mmap_embeddings.restype = ctypes.c_int
_lib.cactus_graph_mmap_weights.argtypes = [
    cactus_graph_t, ctypes.c_char_p, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_mmap_weights.restype = ctypes.c_int
_bind_optional(
    "cactus_graph_bind_mmap_weights",
    [cactus_graph_t, cactus_node_t, ctypes.c_char_p],
    ctypes.c_int,
)
_lib.cactus_graph_bilinear_interpolation.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.c_size_t, ctypes.c_size_t, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_bilinear_interpolation.restype = ctypes.c_int
_bind_optional(
    "cactus_graph_set_grouped_scales",
    [cactus_graph_t, cactus_node_t, ctypes.c_size_t, ctypes.c_size_t, ctypes.c_void_p],
    ctypes.c_int,
)
_bind_optional(
    "cactus_graph_set_interleaved",
    [cactus_graph_t, cactus_node_t, ctypes.c_bool, ctypes.c_size_t],
    ctypes.c_int,
)
_lib.cactus_graph_release_weight_pages.argtypes = [cactus_graph_t, cactus_node_t]
_lib.cactus_graph_release_weight_pages.restype = ctypes.c_int
_lib.cactus_graph_prefetch_weight_pages.argtypes = [cactus_graph_t, cactus_node_t]
_lib.cactus_graph_prefetch_weight_pages.restype = ctypes.c_int
_lib.cactus_graph_release_all_weight_pages.argtypes = [cactus_graph_t]
_lib.cactus_graph_release_all_weight_pages.restype = ctypes.c_int

_lib.cactus_graph_sum.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.c_int32, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_sum.restype = ctypes.c_int
_lib.cactus_graph_mean.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.c_int32, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_mean.restype = ctypes.c_int
_lib.cactus_graph_variance.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.c_int32, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_variance.restype = ctypes.c_int
_lib.cactus_graph_min.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.c_int32, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_min.restype = ctypes.c_int
_lib.cactus_graph_max.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.c_int32, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_max.restype = ctypes.c_int
_lib.cactus_graph_cumsum.argtypes = [
    cactus_graph_t, cactus_node_t, ctypes.c_int32, ctypes.POINTER(cactus_node_t)
]
_lib.cactus_graph_cumsum.restype = ctypes.c_int
